# instinctual

./: .gitignore  README.md  v1_ideas.md  v2_ideas.md
backend/: .env.example  pyproject.toml
backend/eval/fixtures/clean/: fixture.json
backend/eval/fixtures/streamlit_demo/: fixture.json
backend/eval/fixtures/topic_shift/: fixture.json
backend/eval/fixtures/walked_back/: fixture.json
backend/instinct/: __init__.py  __main__.py  anthropic_client.py  cost_tracker.py  embeddings.py  health.py  orchestrator.py  pii.py  server.py  session.py  sidecar.py  transcription.py  user_context.py  ws_protocol.py
backend/instinct/agents/: builder.py  clarifier.py  critic.py  synthesis.py  tagger.py  topic_tracker.py  vision.py
backend/instinct/builder/: claude_code.py
backend/instinct/corpus/: schema.py
backend/instinct/eval/: capture.py  diff.py  fixture.py  replay.py  score.py  scorer_metrics.py
backend/instinct/feasibility/: checker.py  service_registry.py
backend/instinct/prompts/: builder_system.txt  clarifier_system.txt  critic_system.txt  synthesis_system.txt  tagger_system.txt  topic_tracker_system.txt
backend/instinct/providers/: nvidia.py
backend/instinct/recipes/: __init__.py  base.py  scheduled_python_script.py  spec_doc.py  streamlit_dashboard.py
backend/tests/: conftest.py  test_eval_harness.py  test_recipes.py  test_tagger.py
site/: DEPLOY.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
site/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
site/video/: README.md  delivery-spec.md  (+3 more)
(+25 files in other folders)
