[project]
name = "instinct"
version = "0.1.0"
description = "Instinct v0 backend — meeting capture, transcription, multi-agent spec generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "anthropic>=0.40.0",
    "deepgram-sdk>=3.7.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["instinct"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
